tests/errors/codegen/main_wrapper/bad_main_signature_i64_param_rejected.sim

        fn main(exit: &out i64) {
          entry:
            exit.* = 0;
            return
        }
        