tests/errors/codegen/main_wrapper/bad_main_signature_i64_param_rejected.err.expected
error: at 2:17: [TC-MainBadSignature] In function 'main': single parameter must be '&out i32', found &out i64
   |
 2 |         fn main(exit: &out i64) {
   |                 ^^^^^^^^^^^^^^
